--- a/lab-2-cnns/lab-2-cnns.ipynb
+++ b/lab-2-cnns/lab-2-cnns.ipynb
@@ -430,7 +430,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -444,7 +444,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b4451db8b73e28c0ddfda4d2b176157c8dc22b4667f0fbeff20bca7c9f05a095"
+   }
   }
  },
  "nbformat": 4,
