--- a/lab-3-training/lab-3-training.ipynb
+++ b/lab-3-training/lab-3-training.ipynb
@@ -100,6 +100,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ans: performance dropped with the high learning rate of 0.5, as the jumps in the weight space would too large and not move towards any minimums "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "## Tuning Batch Size\n",
     "\n",
@@ -359,7 +366,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -373,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   },
   "pycharm": {
    "stem_cell": {
@@ -382,6 +389,11 @@
      "collapsed": false
     },
     "source": []
+   }
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b4451db8b73e28c0ddfda4d2b176157c8dc22b4667f0fbeff20bca7c9f05a095"
    }
   }
  },
